# ncbi-client

./: README.md  pyproject.toml
docs/: BUILD.md  README.md  conf.py  index.rst
docs/_static/: custom.css
docs/api-reference/: core.md
docs/developer/: contributing.md
docs/examples/: README.md
docs/tutorials/: literature-search.md
docs/user-guide/: cli.md  installation.md  quick-start.md
examples/: README.md  basic_usage.py  comprehensive_example.py  fetch_abstracts.py  simple_cli.py
src/ncbi_client/: __init__.py  cli.py
src/ncbi_client/converters/: __init__.py  format_converter.py  sequence_tools.py
src/ncbi_client/core/: base_client.py  exceptions.py  rate_limiter.py
src/ncbi_client/datasets/: __init__.py  datasets_api.py
src/ncbi_client/eutils/: __init__.py  ecitmatch.py  efetch.py  egquery.py  einfo.py  elink.py  epost.py  esearch.py  espell.py  esummary.py
src/ncbi_client/parsers/: __init__.py  fasta_parser.py  genbank_parser.py  json_parser.py  xml_parser.py
src/ncbi_client/pubchem/: __init__.py  pubchem_api.py
src/ncbi_client/utils/: __init__.py  cache.py  helpers.py  history.py
tests/: __init__.py  test_absolute_imports.py  test_basic.py  test_urllib.py
